more package building stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,14 @@ export(subsample_hetsnps)
 export(walks_temp)
 export(write_distributions_to_json)
 export(write_signature_jsons)
+import(Biostrings)
 import(R6)
+import(VariantAnnotation)
 import(data.table)
 import(httr)
 import(parallel)
+import(skidb)
+import(skitools)
 importFrom(gGnome,parse.js.seqlengths)
 importFrom(gGnome,refresh)
 importFrom(gUtils,dt2gr)
